Fri Dec 20 15:23:26 2002  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.2.0 ===

	* configure.in: Version 2.2.0, interface age 0, binary age 200.

	* README.in: Update the release notes.

	* INSTALL.in: Mention that Pango-1.0 can be used with GTK+-2.2.

	* NEWS: Update.

2002-12-20  Sven Neumann  <sven@gimp.org>

	* examples/gtkdial/gtkdial.c: use G_PI instead of M_PI.

Thu Dec 19 11:42:00 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Call
	the filters on the window where the event is received,
	not on the window the event is "about". (#101512,
	Bolian Yin.)

Thu Dec 19 03:58:36 2002  Kristian Rietveld  <kris@gtk.org>

	* tests/testtreeflow.c: the rand variable should be static to
	avoid conflicts with rand(). (#100844, reported by Soeren Sandmann,
	fix pointed out by Matthias Clasen).

Thu Dec 19 03:56:23 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_real_select_cursor_row): if we
	started editing, we handled this key signal, so return TRUE.
	(#100532, reported by Soeren Sandmann).

2002-12-18  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c: Add docs.

Wed Dec 18 12:05:33 2002  Owen Taylor  <otaylor@redhat.com>

	* NEWS: Various name fixes.

Mon Dec 16 22:38:11 2002  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.1.5 ===

	* configure.in: GTK+-2.1.5, interface age 2, binary age 105.

	* NEWS: Updated.

	* gtk/Makefile.am (gtk_c_sources): Remove reference to fnmatch.h

Mon Dec 16 22:12:01 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Don't use AC_CHECK_LIB() when
	checking for FreeType, Pango, Atk since that get
	the ordering wrong. Instead, set LIBS ourself
	and call AC_TRY_LINK_FUNC(). (#98406)

Mon Dec 16 21:39:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_enter_text): Call
	gtk_entry_set_position_internal() that takes a
	new "reset_IM" parameter, so that we avoid the
	problem where committing text would reset the