@@ -1,3 +1,7 @@
+2002-12-21  Havoc Pennington  <hp@pobox.com>
+
+	* gtk/gtktextview.c (gtk_text_view_move_visually): fix the documentation
+
 Fri Dec 20 15:23:26 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* === Released 2.2.0 ===
